hydroflow/tests/compile-fail/surface_syntax_paren.stderr
error: expected `->`
 --> tests/compile-fail/surface_syntax_paren.rs:5:28
  |
5 |         source_iter(0..10) (for_each(std::mem::drop))
  |                            ^
